# anyarchive

./: README.md  pyproject.toml
anyarchive/: __init__.py
anyarchive/utils/: archive.py
